feature(like-accommodation): users should be able to like and unlike an accommodation facility [Start #168050028]
